# wx-doc-format-desktop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  VENDORED_MANIFEST.json  launcher.py  pyproject.toml
.github/workflows/: build-kylin.yml  build-portable.yml  ci.yml  release.yml
packaging/: build.py  docx-parts-placeholder
packaging/kylin/: MagicFormat.desktop  WXDocFormat.desktop  build_in_container.sh  start.sh
packaging/macos/: README.md
packaging/windows/: README.md
src/wxdoc_core/: __init__.py  appendix_semantics.py  audit.py  caption_placement.py  docx_pipeline.py  docx_render.py  front_matter.py  list_detector.py  md_pipeline.py  model_normalization.py  template_finalizer.py  text_utils.py  toc_detector.py  word_model_renderer.py
src/wxdoc_desktop/: __init__.py  _version.py  cli.py  environment.py  instance.py  resources.py  server.py  service.py
src/wxdoc_desktop/assets/: LICENSE  wx_template.docx  wx_template.sha256
src/wxdoc_desktop/static/: app.js  index.html  styles.css
tests/: test_conversion.py  test_instance.py  test_resources.py  test_security_surface.py
tools/: check_release.py  smoke_package.py  sync_upstream.py
