[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wx-doc-format-desktop"
version = "0.1.0"
description = "Offline WX document formatter for desktop systems"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "WX Doc Format contributors"}]
dependencies = [
  "lxml==6.1.1",
  "python-docx==1.2.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business",
]

[project.optional-dependencies]
build = ["pyinstaller==6.21.0"]
test = ["pytest==9.1.1"]

[project.scripts]
wx-doc-format = "wxdoc_desktop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wxdoc_core = ["engine_version.txt"]
wxdoc_desktop = ["assets/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
